chore: resolve remediations conflicts after merging dev/v3.x
Integrate atomic apply, FVDL encoding, and skip-reason reporting from
dev/v3.x with remediations-cache and issue-id filtering. Share metrics,
CLI validation, and SSC/FoD result JSON helpers.